--- a/client/src/app/layout/components/sidebar/sidebar.component.html
+++ b/client/src/app/layout/components/sidebar/sidebar.component.html
@@ -43,8 +43,8 @@
                         </a>
                     </li>
                     <li>
-                        <a [routerLink]="['/asignacionlink']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-                            <i class="fa fa-bolt"></i>&nbsp;{{ 'Asignacion Link' | translate }}
+                        <a [routerLink]="['/asiganacionlink']" [routerLinkActive]="['router-link-active']" class="list-group-item">
+                            <i class="fa fa-bars"></i>&nbsp;{{ 'Asignacion Link' | translate }}
                         </a>
                     </li>
                     <li>
