Modificación de Menú, Página y Producto

--- a/client/src/app/CRUD/pagina/pagina.component.html
+++ b/client/src/app/CRUD/pagina/pagina.component.html
@@ -38,27 +38,27 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>slider</strong>
+                        <strong>Slider</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>esPrincipal</strong>
+                        <strong>ES Principal</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>texto</strong>
+                        <strong>Texto</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>idFoto</strong>
+                        <strong>Id Foto</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>idMenu</strong>
+                        <strong>Id Menú</strong>
                      </span>
                   </th>
                </tr>
@@ -121,33 +121,33 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="slider" class="col-sm-4 col-form-label">slider</label>
+            <label for="slider" class="col-sm-4 col-form-label">Slider</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="slider" name="slider" placeholder="slider" [(ngModel)]="entidadSeleccionada.slider">
+              <input type="text" class="form-control" id="slider" name="slider" placeholder="Slider" [(ngModel)]="entidadSeleccionada.slider">
             </div>
          </div>
          <div class="form-group row">
-            <label for="esPrincipal" class="col-sm-4 col-form-label">esPrincipal</label>
+            <label for="esPrincipal" class="col-sm-4 col-form-label">ES Principal</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="esPrincipal" name="esPrincipal" placeholder="esPrincipal" [(ngModel)]="entidadSeleccionada.esPrincipal">
+              <input type="text" class="form-control" id="esPrincipal" name="esPrincipal" placeholder="ES Principal" [(ngModel)]="entidadSeleccionada.esPrincipal">
             </div>
          </div>
          <div class="form-group row">
-            <label for="texto" class="col-sm-4 col-form-label">texto</label>
+            <label for="texto" class="col-sm-4 col-form-label">Texto</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="texto" name="texto" placeholder="texto" [(ngModel)]="entidadSeleccionada.texto">
+              <input type="text" class="form-control" id="texto" name="texto" placeholder="Texto" [(ngModel)]="entidadSeleccionada.texto">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idFoto" class="col-sm-4 col-form-label">idFoto</label>
+            <label for="idFoto" class="col-sm-4 col-form-label">Id Foto</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idFoto" name="idFoto" placeholder="idFoto" [(ngModel)]="entidadSeleccionada.idFoto">
+              <input type="text" class="form-control" id="idFoto" name="idFoto" placeholder="Id Foto" [(ngModel)]="entidadSeleccionada.idFoto">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idMenu" class="col-sm-4 col-form-label">idMenu</label>
+            <label for="idMenu" class="col-sm-4 col-form-label">Id Menú</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idMenu" name="idMenu" placeholder="idMenu" [(ngModel)]="entidadSeleccionada.idMenu">
+              <input type="text" class="form-control" id="idMenu" name="idMenu" placeholder="Id Menú" [(ngModel)]="entidadSeleccionada.idMenu">
             </div>
          </div>
          </form>
