--- a/client/src/app/CRUD/producto/producto.component.html
+++ b/client/src/app/CRUD/producto/producto.component.html
@@ -38,37 +38,37 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>titulo</strong>
+                        <strong>Título</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>descripcion</strong>
+                        <strong>Descripción</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>icono</strong>
+                        <strong>Icono</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>prioridad</strong>
+                        <strong>Prioridad</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>linkPaper</strong>
+                        <strong>Link Paper</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>linkSitio</strong>
+                        <strong>Link del Sitio</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>idPagina</strong>
+                        <strong>Id de la Página</strong>
                      </span>
                   </th>
                </tr>
@@ -133,45 +133,45 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="titulo" class="col-sm-4 col-form-label">titulo</label>
+            <label for="titulo" class="col-sm-4 col-form-label">Título</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="titulo" name="titulo" placeholder="titulo" [(ngModel)]="entidadSeleccionada.titulo">
+              <input type="text" class="form-control" id="titulo" name="titulo" placeholder="Título" [(ngModel)]="entidadSeleccionada.titulo">
             </div>
          </div>
          <div class="form-group row">
-            <label for="descripcion" class="col-sm-4 col-form-label">descripcion</label>
+            <label for="descripcion" class="col-sm-4 col-form-label">Descripción</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="descripcion" name="descripcion" placeholder="descripcion" [(ngModel)]="entidadSeleccionada.descripcion">
+              <input type="text" class="form-control" id="descripcion" name="descripcion" placeholder="Descripción" [(ngModel)]="entidadSeleccionada.descripcion">
             </div>
          </div>
          <div class="form-group row">
-            <label for="icono" class="col-sm-4 col-form-label">icono</label>
+            <label for="icono" class="col-sm-4 col-form-label">Icono</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="icono" name="icono" placeholder="icono" [(ngModel)]="entidadSeleccionada.icono">
+              <input type="text" class="form-control" id="icono" name="icono" placeholder="Icono" [(ngModel)]="entidadSeleccionada.icono">
             </div>
          </div>
          <div class="form-group row">
-            <label for="prioridad" class="col-sm-4 col-form-label">prioridad</label>
+            <label for="prioridad" class="col-sm-4 col-form-label">Prioridad</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="prioridad" name="prioridad" placeholder="prioridad" [(ngModel)]="entidadSeleccionada.prioridad">
+              <input type="text" class="form-control" id="prioridad" name="prioridad" placeholder="Prioridad" [(ngModel)]="entidadSeleccionada.prioridad">
             </div>
          </div>
          <div class="form-group row">
-            <label for="linkPaper" class="col-sm-4 col-form-label">linkPaper</label>
+            <label for="linkPaper" class="col-sm-4 col-form-label">Link Paper</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="linkPaper" name="linkPaper" placeholder="linkPaper" [(ngModel)]="entidadSeleccionada.linkPaper">
+              <input type="text" class="form-control" id="linkPaper" name="linkPaper" placeholder="Link Paper" [(ngModel)]="entidadSeleccionada.linkPaper">
             </div>
          </div>
          <div class="form-group row">
-            <label for="linkSitio" class="col-sm-4 col-form-label">linkSitio</label>
+            <label for="linkSitio" class="col-sm-4 col-form-label">Link del Sitio</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="linkSitio" name="linkSitio" placeholder="linkSitio" [(ngModel)]="entidadSeleccionada.linkSitio">
+              <input type="text" class="form-control" id="linkSitio" name="linkSitio" placeholder="Link del Sitio" [(ngModel)]="entidadSeleccionada.linkSitio">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idPagina" class="col-sm-4 col-form-label">idPagina</label>
+            <label for="idPagina" class="col-sm-4 col-form-label">Id de la Página</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idPagina" name="idPagina" placeholder="idPagina" [(ngModel)]="entidadSeleccionada.idPagina">
+              <input type="text" class="form-control" id="idPagina" name="idPagina" placeholder="Id de la Página" [(ngModel)]="entidadSeleccionada.idPagina">
             </div>
          </div>
          </form>
