--- a/client/src/app/CRUD/imagen/imagen.component.html
+++ b/client/src/app/CRUD/imagen/imagen.component.html
@@ -38,22 +38,22 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>idPersona</strong>
+                        <strong>Id de Persona</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>tipoArchivo</strong>
+                        <strong>Tipo de Archivo</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>nombreArchivo</strong>
+                        <strong>Nombre del Archivo</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>adjunto</strong>
+                        <strong>Adjunto</strong>
                      </span>
                   </th>
                </tr>
@@ -115,25 +115,25 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="idPersona" class="col-sm-4 col-form-label">idPersona</label>
+            <label for="idPersona" class="col-sm-4 col-form-label">Id de Persona</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idPersona" name="idPersona" placeholder="idPersona" [(ngModel)]="entidadSeleccionada.idPersona">
             </div>
          </div>
          <div class="form-group row">
-            <label for="tipoArchivo" class="col-sm-4 col-form-label">tipoArchivo</label>
+            <label for="tipoArchivo" class="col-sm-4 col-form-label">Tipo de Archivo</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="tipoArchivo" name="tipoArchivo" placeholder="tipoArchivo" [(ngModel)]="entidadSeleccionada.tipoArchivo">
             </div>
          </div>
          <div class="form-group row">
-            <label for="nombreArchivo" class="col-sm-4 col-form-label">nombreArchivo</label>
+            <label for="nombreArchivo" class="col-sm-4 col-form-label">Nombre de Archivo</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="nombreArchivo" name="nombreArchivo" placeholder="nombreArchivo" [(ngModel)]="entidadSeleccionada.nombreArchivo">
             </div>
          </div>
          <div class="form-group row">
-            <label for="adjunto" class="col-sm-4 col-form-label">adjunto</label>
+            <label for="adjunto" class="col-sm-4 col-form-label">Adjunto</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="adjunto" name="adjunto" placeholder="adjunto" [(ngModel)]="entidadSeleccionada.adjunto">
             </div>
