--- a/client/src/app/CRUD/link/link.component.html
+++ b/client/src/app/CRUD/link/link.component.html
@@ -38,17 +38,17 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>descripcion</strong>
+                        <strong>Descripcion</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>url</strong>
+                        <strong>URL</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>idMenu</strong>
+                        <strong>Id Menu</strong>
                      </span>
                   </th>
                </tr>
@@ -109,19 +109,19 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="descripcion" class="col-sm-4 col-form-label">descripcion</label>
+            <label for="descripcion" class="col-sm-4 col-form-label">Descripcion</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="descripcion" name="descripcion" placeholder="descripcion" [(ngModel)]="entidadSeleccionada.descripcion">
             </div>
          </div>
          <div class="form-group row">
-            <label for="url" class="col-sm-4 col-form-label">url</label>
+            <label for="url" class="col-sm-4 col-form-label">URL</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="url" name="url" placeholder="url" [(ngModel)]="entidadSeleccionada.url">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idMenu" class="col-sm-4 col-form-label">idMenu</label>
+            <label for="idMenu" class="col-sm-4 col-form-label">Id Menu</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idMenu" name="idMenu" placeholder="idMenu" [(ngModel)]="entidadSeleccionada.idMenu">
             </div>
