--- a/client/src/app/CRUD/noticia/noticia.component.html
+++ b/client/src/app/CRUD/noticia/noticia.component.html
@@ -38,22 +38,22 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>descripcion</strong>
+                        <strong>Descripcion</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>idFoto</strong>
+                        <strong>Id de Foto</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>idPagina</strong>
+                        <strong>Id de Pagina</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>esPublico</strong>
+                        <strong>EsPublico</strong>
                      </span>
                   </th>
                </tr>
@@ -115,25 +115,25 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="descripcion" class="col-sm-4 col-form-label">descripcion</label>
+            <label for="descripcion" class="col-sm-4 col-form-label">Descripcion</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="descripcion" name="descripcion" placeholder="descripcion" [(ngModel)]="entidadSeleccionada.descripcion">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idFoto" class="col-sm-4 col-form-label">idFoto</label>
+            <label for="idFoto" class="col-sm-4 col-form-label">Id de Foto</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idFoto" name="idFoto" placeholder="idFoto" [(ngModel)]="entidadSeleccionada.idFoto">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idPagina" class="col-sm-4 col-form-label">idPagina</label>
+            <label for="idPagina" class="col-sm-4 col-form-label">Id de Pagina</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idPagina" name="idPagina" placeholder="idPagina" [(ngModel)]="entidadSeleccionada.idPagina">
             </div>
          </div>
          <div class="form-group row">
-            <label for="esPublico" class="col-sm-4 col-form-label">esPublico</label>
+            <label for="esPublico" class="col-sm-4 col-form-label">EsPublico</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="esPublico" name="esPublico" placeholder="esPublico" [(ngModel)]="entidadSeleccionada.esPublico">
             </div>
