--- a/client/src/app/CRUD/comentario/comentario.component.html
+++ b/client/src/app/CRUD/comentario/comentario.component.html
@@ -38,17 +38,17 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>fechaHora</strong>
+                        <strong>FechaHora</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>idUsuario</strong>
+                        <strong>IdUsuario</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>idNoticia</strong>
+                        <strong>IdNoticia</strong>
                      </span>
                   </th>
                </tr>
@@ -109,19 +109,19 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="fechaHora" class="col-sm-4 col-form-label">fechaHora</label>
+            <label for="fechaHora" class="col-sm-4 col-form-label">FechaHora</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="fechaHora" name="fechaHora" placeholder="fechaHora" [(ngModel)]="entidadSeleccionada.fechaHora">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idUsuario" class="col-sm-4 col-form-label">idUsuario</label>
+            <label for="idUsuario" class="col-sm-4 col-form-label">IdUsuario</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idUsuario" name="idUsuario" placeholder="idUsuario" [(ngModel)]="entidadSeleccionada.idUsuario">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idNoticia" class="col-sm-4 col-form-label">idNoticia</label>
+            <label for="idNoticia" class="col-sm-4 col-form-label">IdNoticia</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idNoticia" name="idNoticia" placeholder="idNoticia" [(ngModel)]="entidadSeleccionada.idNoticia">
             </div>
