--- a/client/src/app/CRUD/item/item.component.html
+++ b/client/src/app/CRUD/item/item.component.html
@@ -38,22 +38,22 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>descripcion</strong>
+                        <strong>Descripcion</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>link</strong>
+                        <strong>Link</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>idMenu</strong>
+                        <strong>IdMenu</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>idPagina</strong>
+                        <strong>IdPagina</strong>
                      </span>
                   </th>
                </tr>
@@ -115,25 +115,25 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="descripcion" class="col-sm-4 col-form-label">descripcion</label>
+            <label for="descripcion" class="col-sm-4 col-form-label">Descripcion</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="descripcion" name="descripcion" placeholder="descripcion" [(ngModel)]="entidadSeleccionada.descripcion">
             </div>
          </div>
          <div class="form-group row">
-            <label for="link" class="col-sm-4 col-form-label">link</label>
+            <label for="link" class="col-sm-4 col-form-label">Link</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="link" name="link" placeholder="link" [(ngModel)]="entidadSeleccionada.link">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idMenu" class="col-sm-4 col-form-label">idMenu</label>
+            <label for="idMenu" class="col-sm-4 col-form-label">IdMenu</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idMenu" name="idMenu" placeholder="idMenu" [(ngModel)]="entidadSeleccionada.idMenu">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idPagina" class="col-sm-4 col-form-label">idPagina</label>
+            <label for="idPagina" class="col-sm-4 col-form-label">IdPagina</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idPagina" name="idPagina" placeholder="idPagina" [(ngModel)]="entidadSeleccionada.idPagina">
             </div>
