--- a/client/src/app/CRUD/usuario/usuario.component.html
+++ b/client/src/app/CRUD/usuario/usuario.component.html
@@ -38,27 +38,27 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>nombreCompleto</strong>
+                        <strong>NombreCompleto</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>nickname</strong>
+                        <strong>Nickname</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>email</strong>
+                        <strong>Email</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>clave</strong>
+                        <strong>Clave</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>avatar</strong>
+                        <strong>Avatar</strong>
                      </span>
                   </th>
                </tr>
@@ -121,31 +121,31 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="nombreCompleto" class="col-sm-4 col-form-label">nombreCompleto</label>
+            <label for="nombreCompleto" class="col-sm-4 col-form-label">NombreCompleto</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="nombreCompleto" name="nombreCompleto" placeholder="nombreCompleto" [(ngModel)]="entidadSeleccionada.nombreCompleto">
             </div>
          </div>
          <div class="form-group row">
-            <label for="nickname" class="col-sm-4 col-form-label">nickname</label>
+            <label for="nickname" class="col-sm-4 col-form-label">Nickname</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="nickname" name="nickname" placeholder="nickname" [(ngModel)]="entidadSeleccionada.nickname">
             </div>
          </div>
          <div class="form-group row">
-            <label for="email" class="col-sm-4 col-form-label">email</label>
+            <label for="email" class="col-sm-4 col-form-label">Email</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="email" name="email" placeholder="email" [(ngModel)]="entidadSeleccionada.email">
             </div>
          </div>
          <div class="form-group row">
-            <label for="clave" class="col-sm-4 col-form-label">clave</label>
+            <label for="clave" class="col-sm-4 col-form-label">Clave</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="clave" name="clave" placeholder="clave" [(ngModel)]="entidadSeleccionada.clave">
             </div>
          </div>
          <div class="form-group row">
-            <label for="avatar" class="col-sm-4 col-form-label">avatar</label>
+            <label for="avatar" class="col-sm-4 col-form-label">Avatar</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="avatar" name="avatar" placeholder="avatar" [(ngModel)]="entidadSeleccionada.avatar">
             </div>
