Asignacion del link

--- a/client/src/app/CRUD/asiganacionlink/asiganacionlink.component.html
+++ b/client/src/app/CRUD/asiganacionlink/asiganacionlink.component.html
@@ -38,17 +38,17 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>prioridad</strong>
+                        <strong>Prioridad</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>idLink</strong>
+                        <strong>IdLink</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>idPagina</strong>
+                        <strong>IdPagina</strong>
                      </span>
                   </th>
                </tr>
