--- a/client/src/app/CRUD/asiganacionlink/asiganacionlink.component.html
+++ b/client/src/app/CRUD/asiganacionlink/asiganacionlink.component.html
@@ -1,7 +1,7 @@
 <div class="container">
    <div class="row">
       <div class="col-md-12 text-right">
-         <h2 style="margin-top:0px">Catálogo de AsiganacionLink</h2>
+         <h2 style="margin-top:0px">Catálogo de Asignacion Link</h2>
       </div>
    </div>
    <div class="row">
@@ -109,19 +109,19 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="prioridad" class="col-sm-4 col-form-label">prioridad</label>
+            <label for="prioridad" class="col-sm-4 col-form-label">Prioridad</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="prioridad" name="prioridad" placeholder="prioridad" [(ngModel)]="entidadSeleccionada.prioridad">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idLink" class="col-sm-4 col-form-label">idLink</label>
+            <label for="idLink" class="col-sm-4 col-form-label">IdLink</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idLink" name="idLink" placeholder="idLink" [(ngModel)]="entidadSeleccionada.idLink">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idPagina" class="col-sm-4 col-form-label">idPagina</label>
+            <label for="idPagina" class="col-sm-4 col-form-label">IdPagina</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idPagina" name="idPagina" placeholder="idPagina" [(ngModel)]="entidadSeleccionada.idPagina">
             </div>
