--- a/client/src/app/layout/components/sidebar/sidebar.component.html
+++ b/client/src/app/layout/components/sidebar/sidebar.component.html
@@ -35,10 +35,11 @@
                     </li>
                     <li>
                         <a [routerLink]="['/imagen']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-                            <i class="fa fa-file-image-o"></i>&nbsp;{{ 'Imagen' | translate }}
+                            <i class="fa fa-file-image-os"></i>&nbsp;{{ 'Imagen' | translate }}
                         </a>
 
                     </li>
+
                     <li>
                         <a href="javascript:void(0)"><span>{{ 'Submenu' | translate }}</span></a>
                     </li>
