--- a/client/src/app/CRUD/asiganacionlink/asiganacionlink.component.html
+++ b/client/src/app/CRUD/asiganacionlink/asiganacionlink.component.html
@@ -41,6 +41,8 @@
                         <strong>prioridad</strong>
                      </span>
                   </th>
+                }}
+
                   <th scope="col">
                      <span>
                         <strong>idLink</strong>
@@ -109,7 +111,7 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="prioridad" class="col-sm-4 col-form-label">prioridad</label>
+            <label for="prioridad" class="col-sm-4 col-form-label">Prioridad</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="prioridad" name="prioridad" placeholder="prioridad" [(ngModel)]="entidadSeleccionada.prioridad">
             </div>
