--- a/client/src/app/CRUD/imagen/imagen.component.html
+++ b/client/src/app/CRUD/imagen/imagen.component.html
@@ -38,7 +38,7 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>Id de Persona</strong>
+                        <strong>Persona</strong>
                      </span>
                   </th>
                   <th scope="col">
@@ -115,7 +115,7 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="idPersona" class="col-sm-4 col-form-label">Id de Persona</label>
+            <label for="idPersona" class="col-sm-4 col-form-label">Persona</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idPersona" name="idPersona" placeholder="idPersona" [(ngModel)]="entidadSeleccionada.idPersona">
             </div>
