--- a/client/src/app/CRUD/asiganacionlink/asiganacionlink.component.html
+++ b/client/src/app/CRUD/asiganacionlink/asiganacionlink.component.html
@@ -43,12 +43,12 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>IdLink</strong>
+                        <strong>Link</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>IdPagina</strong>
+                        <strong>Página</strong>
                      </span>
                   </th>
                </tr>
@@ -115,13 +115,13 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="idLink" class="col-sm-4 col-form-label">IdLink</label>
+            <label for="idLink" class="col-sm-4 col-form-label">Link</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idLink" name="idLink" placeholder="idLink" [(ngModel)]="entidadSeleccionada.idLink">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idPagina" class="col-sm-4 col-form-label">IdPagina</label>
+            <label for="idPagina" class="col-sm-4 col-form-label">Página</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idPagina" name="idPagina" placeholder="idPagina" [(ngModel)]="entidadSeleccionada.idPagina">
             </div>
