--- a/client/src/app/CRUD/link/link.component.html
+++ b/client/src/app/CRUD/link/link.component.html
@@ -38,7 +38,7 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>Descripcion</strong>
+                        <strong>Descripción</strong>
                      </span>
                   </th>
                   <th scope="col">
@@ -48,7 +48,7 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>Id Menu</strong>
+                        <strong>Menú</strong>
                      </span>
                   </th>
                </tr>
@@ -109,7 +109,7 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="descripcion" class="col-sm-4 col-form-label">Descripcion</label>
+            <label for="descripcion" class="col-sm-4 col-form-label">Descripción</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="descripcion" name="descripcion" placeholder="descripcion" [(ngModel)]="entidadSeleccionada.descripcion">
             </div>
@@ -121,7 +121,7 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="idMenu" class="col-sm-4 col-form-label">Id Menu</label>
+            <label for="idMenu" class="col-sm-4 col-form-label">Menú</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idMenu" name="idMenu" placeholder="idMenu" [(ngModel)]="entidadSeleccionada.idMenu">
             </div>
