Cambios en Página y Producto

--- a/client/src/app/CRUD/producto/producto.component.html
+++ b/client/src/app/CRUD/producto/producto.component.html
@@ -68,7 +68,7 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>Id de la Página</strong>
+                        <strong>Página</strong>
                      </span>
                   </th>
                </tr>
@@ -169,9 +169,9 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="idPagina" class="col-sm-4 col-form-label">Id de la Página</label>
+            <label for="idPagina" class="col-sm-4 col-form-label">Página</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idPagina" name="idPagina" placeholder="Id de la Página" [(ngModel)]="entidadSeleccionada.idPagina">
+              <input type="text" class="form-control" id="idPagina" name="idPagina" placeholder="Página" [(ngModel)]="entidadSeleccionada.idPagina">
             </div>
          </div>
          </form>
