--- a/client/src/app/CRUD/pagina/pagina.component.html
+++ b/client/src/app/CRUD/pagina/pagina.component.html
@@ -43,7 +43,7 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>ES Principal</strong>
+                        <strong>Es Principal ?</strong>
                      </span>
                   </th>
                   <th scope="col">
@@ -53,12 +53,12 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>Id Foto</strong>
+                        <strong>Imagen</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>Id Menú</strong>
+                        <strong>Menú</strong>
                      </span>
                   </th>
                </tr>
@@ -127,9 +127,9 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="esPrincipal" class="col-sm-4 col-form-label">ES Principal</label>
+            <label for="esPrincipal" class="col-sm-4 col-form-label">Es Principal ?</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="esPrincipal" name="esPrincipal" placeholder="ES Principal" [(ngModel)]="entidadSeleccionada.esPrincipal">
+              <input type="text" class="form-control" id="esPrincipal" name="esPrincipal" placeholder="Es Principal ?" [(ngModel)]="entidadSeleccionada.esPrincipal">
             </div>
          </div>
          <div class="form-group row">
@@ -139,15 +139,15 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="idFoto" class="col-sm-4 col-form-label">Id Foto</label>
+            <label for="idFoto" class="col-sm-4 col-form-label">Imagen</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idFoto" name="idFoto" placeholder="Id Foto" [(ngModel)]="entidadSeleccionada.idFoto">
+              <input type="text" class="form-control" id="idFoto" name="idFoto" placeholder="Imagen" [(ngModel)]="entidadSeleccionada.idFoto">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idMenu" class="col-sm-4 col-form-label">Id Menú</label>
+            <label for="idMenu" class="col-sm-4 col-form-label">Menú</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idMenu" name="idMenu" placeholder="Id Menú" [(ngModel)]="entidadSeleccionada.idMenu">
+              <input type="text" class="form-control" id="idMenu" name="idMenu" placeholder="Menú" [(ngModel)]="entidadSeleccionada.idMenu">
             </div>
          </div>
          </form>
