--- a/client/src/app/CRUD/comentario/comentario.component.html
+++ b/client/src/app/CRUD/comentario/comentario.component.html
@@ -43,12 +43,12 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>IdUsuario</strong>
+                        <strong>Usuario</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>IdNoticia</strong>
+                        <strong>Noticia</strong>
                      </span>
                   </th>
                </tr>
@@ -115,13 +115,13 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="idUsuario" class="col-sm-4 col-form-label">IdUsuario</label>
+            <label for="idUsuario" class="col-sm-4 col-form-label">Usuario</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idUsuario" name="idUsuario" placeholder="idUsuario" [(ngModel)]="entidadSeleccionada.idUsuario">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idNoticia" class="col-sm-4 col-form-label">IdNoticia</label>
+            <label for="idNoticia" class="col-sm-4 col-form-label">Noticia</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idNoticia" name="idNoticia" placeholder="idNoticia" [(ngModel)]="entidadSeleccionada.idNoticia">
             </div>
