--- a/client/src/app/CRUD/item/item.component.html
+++ b/client/src/app/CRUD/item/item.component.html
@@ -38,7 +38,7 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>Descripcion</strong>
+                        <strong>Descripción</strong>
                      </span>
                   </th>
                   <th scope="col">
@@ -48,12 +48,12 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>IdMenu</strong>
+                        <strong>Menú</strong>
                      </span>
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>IdPagina</strong>
+                        <strong>Página</strong>
                      </span>
                   </th>
                </tr>
@@ -127,13 +127,13 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="idMenu" class="col-sm-4 col-form-label">IdMenu</label>
+            <label for="idMenu" class="col-sm-4 col-form-label">Menú</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idMenu" name="idMenu" placeholder="idMenu" [(ngModel)]="entidadSeleccionada.idMenu">
             </div>
          </div>
          <div class="form-group row">
-            <label for="idPagina" class="col-sm-4 col-form-label">IdPagina</label>
+            <label for="idPagina" class="col-sm-4 col-form-label">Página</label>
             <div class="col-sm-8">
               <input type="text" class="form-control" id="idPagina" name="idPagina" placeholder="idPagina" [(ngModel)]="entidadSeleccionada.idPagina">
             </div>
