--- a/client/src/app/CRUD/comentario/comentario.component.html
+++ b/client/src/app/CRUD/comentario/comentario.component.html
@@ -109,21 +109,21 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="fechaHora" class="col-sm-4 col-form-label">FechaHora</label>
+            <label for="fechaHora" class="col-sm-4 col-form-label">Fecha y Hora</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="fechaHora" name="fechaHora" placeholder="fechaHora" [(ngModel)]="entidadSeleccionada.fechaHora">
+              <input type="text" class="form-control" id="fechaHora" name="fechaHora" placeholder="Fecha y Hora" [(ngModel)]="entidadSeleccionada.fechaHora">
             </div>
          </div>
          <div class="form-group row">
             <label for="idUsuario" class="col-sm-4 col-form-label">Usuario</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idUsuario" name="idUsuario" placeholder="idUsuario" [(ngModel)]="entidadSeleccionada.idUsuario">
+              <input type="text" class="form-control" id="idUsuario" name="idUsuario" placeholder="Usuario" [(ngModel)]="entidadSeleccionada.idUsuario">
             </div>
          </div>
          <div class="form-group row">
             <label for="idNoticia" class="col-sm-4 col-form-label">Noticia</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idNoticia" name="idNoticia" placeholder="idNoticia" [(ngModel)]="entidadSeleccionada.idNoticia">
+              <input type="text" class="form-control" id="idNoticia" name="idNoticia" placeholder="Noticia" [(ngModel)]="entidadSeleccionada.idNoticia">
             </div>
          </div>
          </form>
