--- a/client/src/app/CRUD/item/item.component.html
+++ b/client/src/app/CRUD/item/item.component.html
@@ -117,25 +117,25 @@
          <div class="form-group row">
             <label for="descripcion" class="col-sm-4 col-form-label">Descripcion</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="descripcion" name="descripcion" placeholder="descripcion" [(ngModel)]="entidadSeleccionada.descripcion">
+              <input type="text" class="form-control" id="descripcion" name="descripcion" placeholder="Descripción" [(ngModel)]="entidadSeleccionada.descripcion">
             </div>
          </div>
          <div class="form-group row">
             <label for="link" class="col-sm-4 col-form-label">Link</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="link" name="link" placeholder="link" [(ngModel)]="entidadSeleccionada.link">
+              <input type="text" class="form-control" id="link" name="link" placeholder="Link" [(ngModel)]="entidadSeleccionada.link">
             </div>
          </div>
          <div class="form-group row">
             <label for="idMenu" class="col-sm-4 col-form-label">Menú</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idMenu" name="idMenu" placeholder="idMenu" [(ngModel)]="entidadSeleccionada.idMenu">
+              <input type="text" class="form-control" id="idMenu" name="idMenu" placeholder="Menú" [(ngModel)]="entidadSeleccionada.idMenu">
             </div>
          </div>
          <div class="form-group row">
             <label for="idPagina" class="col-sm-4 col-form-label">Página</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idPagina" name="idPagina" placeholder="idPagina" [(ngModel)]="entidadSeleccionada.idPagina">
+              <input type="text" class="form-control" id="idPagina" name="idPagina" placeholder="Página" [(ngModel)]="entidadSeleccionada.idPagina">
             </div>
          </div>
          </form>
