--- a/client/src/app/CRUD/usuario/usuario.component.html
+++ b/client/src/app/CRUD/usuario/usuario.component.html
@@ -38,7 +38,7 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>NombreCompleto</strong>
+                        <strong>Nombre Completo</strong>
                      </span>
                   </th>
                   <th scope="col">
@@ -121,33 +121,33 @@
             </div>
          </div>
          <div class="form-group row">
-            <label for="nombreCompleto" class="col-sm-4 col-form-label">NombreCompleto</label>
+            <label for="nombreCompleto" class="col-sm-4 col-form-label">Nombre Completo</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="nombreCompleto" name="nombreCompleto" placeholder="nombreCompleto" [(ngModel)]="entidadSeleccionada.nombreCompleto">
+              <input type="text" class="form-control" id="nombreCompleto" name="nombreCompleto" placeholder="Nombre Completo" [(ngModel)]="entidadSeleccionada.nombreCompleto">
             </div>
          </div>
          <div class="form-group row">
             <label for="nickname" class="col-sm-4 col-form-label">Nickname</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="nickname" name="nickname" placeholder="nickname" [(ngModel)]="entidadSeleccionada.nickname">
+              <input type="text" class="form-control" id="nickname" name="nickname" placeholder="Nickname" [(ngModel)]="entidadSeleccionada.nickname">
             </div>
          </div>
          <div class="form-group row">
             <label for="email" class="col-sm-4 col-form-label">Email</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="email" name="email" placeholder="email" [(ngModel)]="entidadSeleccionada.email">
+              <input type="text" class="form-control" id="email" name="email" placeholder="Email" [(ngModel)]="entidadSeleccionada.email">
             </div>
          </div>
          <div class="form-group row">
             <label for="clave" class="col-sm-4 col-form-label">Clave</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="clave" name="clave" placeholder="clave" [(ngModel)]="entidadSeleccionada.clave">
+              <input type="text" class="form-control" id="clave" name="clave" placeholder="Clave" [(ngModel)]="entidadSeleccionada.clave">
             </div>
          </div>
          <div class="form-group row">
             <label for="avatar" class="col-sm-4 col-form-label">Avatar</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="avatar" name="avatar" placeholder="avatar" [(ngModel)]="entidadSeleccionada.avatar">
+              <input type="text" class="form-control" id="avatar" name="avatar" placeholder="Avatar" [(ngModel)]="entidadSeleccionada.avatar">
             </div>
          </div>
          </form>
