--- a/client/src/app/CRUD/imagen/imagen.component.html
+++ b/client/src/app/CRUD/imagen/imagen.component.html
@@ -117,25 +117,25 @@
          <div class="form-group row">
             <label for="idPersona" class="col-sm-4 col-form-label">Persona</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idPersona" name="idPersona" placeholder="idPersona" [(ngModel)]="entidadSeleccionada.idPersona">
+              <input type="text" class="form-control" id="idPersona" name="idPersona" placeholder="Persona" [(ngModel)]="entidadSeleccionada.idPersona">
             </div>
          </div>
          <div class="form-group row">
             <label for="tipoArchivo" class="col-sm-4 col-form-label">Tipo de Archivo</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="tipoArchivo" name="tipoArchivo" placeholder="tipoArchivo" [(ngModel)]="entidadSeleccionada.tipoArchivo">
+              <input type="text" class="form-control" id="tipoArchivo" name="tipoArchivo" placeholder="Tipo de Archivo" [(ngModel)]="entidadSeleccionada.tipoArchivo">
             </div>
          </div>
          <div class="form-group row">
             <label for="nombreArchivo" class="col-sm-4 col-form-label">Nombre de Archivo</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="nombreArchivo" name="nombreArchivo" placeholder="nombreArchivo" [(ngModel)]="entidadSeleccionada.nombreArchivo">
+              <input type="text" class="form-control" id="nombreArchivo" name="nombreArchivo" placeholder="Nombre de Archivo" [(ngModel)]="entidadSeleccionada.nombreArchivo">
             </div>
          </div>
          <div class="form-group row">
             <label for="adjunto" class="col-sm-4 col-form-label">Adjunto</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="adjunto" name="adjunto" placeholder="adjunto" [(ngModel)]="entidadSeleccionada.adjunto">
+              <input type="text" class="form-control" id="adjunto" name="adjunto" placeholder="Adjunto" [(ngModel)]="entidadSeleccionada.adjunto">
             </div>
          </div>
          </form>
