--- a/client/src/app/CRUD/link/link.component.html
+++ b/client/src/app/CRUD/link/link.component.html
@@ -111,19 +111,19 @@
          <div class="form-group row">
             <label for="descripcion" class="col-sm-4 col-form-label">Descripción</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="descripcion" name="descripcion" placeholder="descripcion" [(ngModel)]="entidadSeleccionada.descripcion">
+              <input type="text" class="form-control" id="descripcion" name="descripcion" placeholder="Descripción" [(ngModel)]="entidadSeleccionada.descripcion">
             </div>
          </div>
          <div class="form-group row">
             <label for="url" class="col-sm-4 col-form-label">URL</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="url" name="url" placeholder="url" [(ngModel)]="entidadSeleccionada.url">
+              <input type="text" class="form-control" id="url" name="url" placeholder="URL" [(ngModel)]="entidadSeleccionada.url">
             </div>
          </div>
          <div class="form-group row">
             <label for="idMenu" class="col-sm-4 col-form-label">Menú</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idMenu" name="idMenu" placeholder="idMenu" [(ngModel)]="entidadSeleccionada.idMenu">
+              <input type="text" class="form-control" id="idMenu" name="idMenu" placeholder="Menú" [(ngModel)]="entidadSeleccionada.idMenu">
             </div>
          </div>
          </form>
