--- a/client/src/app/CRUD/noticia/noticia.component.html
+++ b/client/src/app/CRUD/noticia/noticia.component.html
@@ -117,25 +117,25 @@
          <div class="form-group row">
             <label for="descripcion" class="col-sm-4 col-form-label">Descripción</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="descripcion" name="descripcion" placeholder="descripcion" [(ngModel)]="entidadSeleccionada.descripcion">
+              <input type="text" class="form-control" id="descripcion" name="descripcion" placeholder="Descripción" [(ngModel)]="entidadSeleccionada.descripcion">
             </div>
          </div>
          <div class="form-group row">
             <label for="idFoto" class="col-sm-4 col-form-label">Imagen</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idFoto" name="idFoto" placeholder="idFoto" [(ngModel)]="entidadSeleccionada.idFoto">
+              <input type="text" class="form-control" id="idFoto" name="idFoto" placeholder="Foto" [(ngModel)]="entidadSeleccionada.idFoto">
             </div>
          </div>
          <div class="form-group row">
             <label for="idPagina" class="col-sm-4 col-form-label">Página</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="idPagina" name="idPagina" placeholder="idPagina" [(ngModel)]="entidadSeleccionada.idPagina">
+              <input type="text" class="form-control" id="idPagina" name="idPagina" placeholder="Página" [(ngModel)]="entidadSeleccionada.idPagina">
             </div>
          </div>
          <div class="form-group row">
             <label for="esPublico" class="col-sm-4 col-form-label">Es Público ?</label>
             <div class="col-sm-8">
-              <input type="text" class="form-control" id="esPublico" name="esPublico" placeholder="esPublico" [(ngModel)]="entidadSeleccionada.esPublico">
+              <input type="text" class="form-control" id="esPublico" name="esPublico" placeholder="Público" [(ngModel)]="entidadSeleccionada.esPublico">
             </div>
          </div>
          </form>
