--- a/client/src/app/CRUD/comentario/comentario.component.html
+++ b/client/src/app/CRUD/comentario/comentario.component.html
@@ -38,7 +38,7 @@
                   </th>
                   <th scope="col">
                      <span>
-                        <strong>FechaHora</strong>
+                        <strong>Fecha y Hora</strong>
                      </span>
                   </th>
                   <th scope="col">
