--- a/client/src/app/layout/dashboard/dashboard.component.html
+++ b/client/src/app/layout/dashboard/dashboard.component.html
@@ -1,8 +1,27 @@
 <div [@routerTransition]>
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-
+            <br>
+            <div class="col-3">
+                <div [@routerTransition]>
+                    <h1 align="center">
+                        <img src="../assets/images/PRUEBA.gif" alt="YAVIRAC" width="80%" height="auto">
+                    </h1>
+                </div>
+            </div>
+            <div class="col-6">
+                <div [@routerTransition]>
+                    <h1 align="center">
+                        <img src="../assets/images/LetrasYavirac.PNG" alt="YAVIRAC" width="100%" height="100%">
+                    </h1>
+                </div>
+            </div>
+            <div class="col-3">
+                <div [@routerTransition]>
+                    <h1 align="center">
+                        <img src="../assets/images/senescyt.png" alt="YAVIRAC" width="100%" height="auto">
+                    </h1>
+                </div>
             </div>
         </div>
     </div>
