--- a/client/src/app/layout/dashboard/dashboard.component.html
+++ b/client/src/app/layout/dashboard/dashboard.component.html
@@ -56,6 +56,8 @@
     <hr />
     <ngb-alert [type]="alert.type" (close)="closeAlert(alert)" *ngFor="let alert of alerts">{{ alert.message }}</ngb-alert>
     <hr />
+    <ngb-alert [type]="alert.type" (close)="closeAlert(alert)" *ngFor="let alert of alerts">{{ alert.message }}</ngb-alert>
+    <hr />
     <div class="row">
         <div class="col-lg-8">
             <div class="card card-default">
