--- a/client/src/app/layout/components/sidebar/sidebar.component.html
+++ b/client/src/app/layout/components/sidebar/sidebar.component.html
@@ -44,7 +44,7 @@
                     </li>
                     <li>
                         <a [routerLink]="['/asiganacionlink']" [routerLinkActive]="['router-link-active']" class="list-group-item">
-                            <i class="fa fa-bars"></i>&nbsp;{{ 'Asignacion Link' | translate }}
+                            <i class="fa fa-external-link"></i>&nbsp;{{ 'Asignacion Link' | translate }}
                         </a>
                     </li>
                     <li>
