--- a/client/src/app/layout/dashboard/dashboard.component.html
+++ b/client/src/app/layout/dashboard/dashboard.component.html
@@ -89,7 +89,7 @@
         <div class="col-lg-4">
             <div class="card card-default mb-3">
                 <div class="card-header">
-                    <i class="fa fa-bell fa-fw"></i> Notifications card
+                    <i class="fa fa-bell fa-fw"></i> Notificaciones
                 </div>
                 <!-- /.card-header -->
                 <app-notification></app-notification>
