--- a/client/src/app/layout/dashboard/components/notification/notification.component.html
+++ b/client/src/app/layout/dashboard/components/notification/notification.component.html
@@ -1,42 +1,42 @@
 <div class="card-body">
     <div class="list-group">
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-comment fa-fw"></i> New Comment
-            <span class="float-right text-muted small"><em>4 minutes ago</em></span>
+            <i class="fa fa-comment fa-fw"></i> Nuevo Comentario
+            <span class="float-right text-muted small"><em>hace 4 minutos </em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-            <span class="float-right text-muted small"><em>12 minutes ago</em></span>
+            <i class="fa fa-twitter fa-fw"></i> 3 Nuevos Seguidores
+            <span class="float-right text-muted small"><em>hace 12 minutos</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-envelope fa-fw"></i> Message Sent
-            <span class="float-right text-muted small"><em>27 minutes ago</em></span>
+            <i class="fa fa-envelope fa-fw"></i> Mensajes Enviados
+            <span class="float-right text-muted small"><em>hace 27 minutos</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-tasks fa-fw"></i> New Task
-            <span class="float-right text-muted small"><em>43 minutes ago</em></span>
+            <i class="fa fa-tasks fa-fw"></i> Nueva Tarea
+            <span class="float-right text-muted small"><em>hace 43 minutos</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-upload fa-fw"></i> Server Rebooted
+            <i class="fa fa-upload fa-fw"></i> Servidor Reiniciado
             <span class="float-right text-muted small"><em>11:32 AM</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-bolt fa-fw"></i> Server Crashed!
+            <i class="fa fa-bolt fa-fw"></i> Servidor Caido!
             <span class="float-right text-muted small"><em>11:13 AM</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-warning fa-fw"></i> Server Not Responding
+            <i class="fa fa-warning fa-fw"></i> Servidor no Responde
             <span class="float-right text-muted small"><em>10:57 AM</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-shopping-cart fa-fw"></i> New Order Placed
+            <i class="fa fa-shopping-cart fa-fw"></i> Nueva Orden Recibida
             <span class="float-right text-muted small"><em>9:49 AM</em></span>
         </a>
         <a href="#" class="list-group-item clearfix d-block">
-            <i class="fa fa-money fa-fw"></i> Payment Received
-            <span class="float-right text-muted small"><em>Yesterday</em></span>
+            <i class="fa fa-money fa-fw"></i> Nuevo Pago Recibido
+            <span class="float-right text-muted small"><em>Ayer</em></span>
         </a>
     </div>
     <!-- /.list-group -->
-    <a href="#" class="btn btn-default btn-block">View All Alerts</a>
+    <a href="#" class="btn btn-default btn-block">Ver Todas las Alertas</a>
 </div>
