ARREGLO DEL CHAT

--- a/client/src/app/layout/dashboard/components/chat/chat.component.html
+++ b/client/src/app/layout/dashboard/components/chat/chat.component.html
@@ -8,29 +8,29 @@
             </button>
             <ul class="dropdown-menu dropdown-menu-right">
                 <li role="menuitem"><a class="dropdown-item" href="#">
-                    <i class="fa fa-refresh fa-fw"></i> Refresh</a>
+                    <i class="fa fa-refresh fa-fw"></i> Actualizar</a>
                 </li>
                 <li role="menuitem"><a class="dropdown-item" href="#">
-                    <i class="fa fa-check-circle fa-fw"></i> Available</a>
+                    <i class="fa fa-check-circle fa-fw"></i> Disponible</a>
                 </li>
                 <li role="menuitem"><a class="dropdown-item" href="#">
-                    <i class="fa fa-times fa-fw"></i> Busy</a>
+                    <i class="fa fa-times fa-fw"></i> Ocupado</a>
                 </li>
                 <li class="divider dropdown-divider"></li>
                 <li role="menuitem">
                     <a href="#" class="dropdown-item">
-                        <i class="fa fa-times fa-fw"></i> Busy
+                        <i class="fa fa-times fa-fw"></i> Ocupado
                     </a>
                 </li>
                 <li>
                     <a href="#" class="dropdown-item">
-                        <i class="fa fa-clock-o fa-fw"></i> Away
+                        <i class="fa fa-clock-o fa-fw"></i> Lejos
                     </a>
                 </li>
                 <li class="divider"></li>
                 <li>
                   <a href="#" class="dropdown-item">
-                    <i class="fa fa-sign-out fa-fw"></i> Sign Out
+                    <i class="fa fa-sign-out fa-fw"></i> Cerrar Sesión
                   </a>
                 </li>
             </ul>
@@ -45,13 +45,13 @@
                 </span>
                 <div class="chat-body clearfix">
                     <div class="header">
-                        <strong class="primary-font">Jack Sparrow</strong>
+                        <strong class="primary-font">Erick Erraez</strong>
                         <small class="pull-right text-muted">
-                            <i class="fa fa-clock-o fa-fw"></i> 12 mins ago
+                            <i class="fa fa-clock-o fa-fw"></i> Hace 5 minutos
                         </small>
                     </div>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales.
+                    El Instituto YAVIRAC es uno de los mejores institutos a nivel Nacional en el Ecuador.
                     </p>
                 </div>
             </li>
@@ -62,13 +62,13 @@
                 <div class="chat-body clearfix">
                     <div class="header">
                         <small class=" text-muted">
-                            <i class="fa fa-clock-o fa-fw"></i> 13 mins ago
+                            <i class="fa fa-clock-o fa-fw"></i> Hace 13 minutos
                         </small>
-                        <strong class="pull-right primary-font">Bhaumik Patel</strong>
+                        <strong class="pull-right primary-font">Alejandro Coronel</strong>
                     </div>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales.
-                    </p>
+                   El Instituto es muy grande y posee muchas especialidades
+                   </p>
                 </div>
             </li>
             <li class="left clearfix">
@@ -77,13 +77,13 @@
                 </span>
                 <div class="chat-body clearfix">
                     <div class="header">
-                        <strong class="primary-font">Jack Sparrow</strong>
+                        <strong class="primary-font">Bryan Cortez</strong>
                         <small class="pull-right text-muted">
-                            <i class="fa fa-clock-o fa-fw"></i> 14 mins ago
+                            <i class="fa fa-clock-o fa-fw"></i> Hace 14 minutos
                         </small>
                     </div>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales.
+                    El Instituto posee una alta gama de profesores especializados
                     </p>
                 </div>
             </li>
@@ -94,13 +94,13 @@
                 <div class="chat-body clearfix">
                     <div class="header">
                         <small class=" text-muted">
-                            <i class="fa fa-clock-o fa-fw"></i> 15 mins ago
+                            <i class="fa fa-clock-o fa-fw"></i> Hace 15 minutos
                         </small>
-                        <strong class="pull-right primary-font">Bhaumik Patel</strong>
+                        <strong class="pull-right primary-font">Carlos Veloz</strong>
                     </div>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur bibendum ornare dolor, quis ullamcorper ligula sodales.
-                    </p>
+                    Tiene muy buena vista hacia el Panecillo
+                </p>
                 </div>
             </li>
         </ul>
@@ -108,10 +108,10 @@
     <!-- /.card-body -->
     <div class="card-footer">
         <div class="input-group">
-            <input id="btn-input" type="text" class="form-control input-sm" placeholder="Type your message here...">
+            <input id="btn-input" type="text" class="form-control input-sm" placeholder="Escribe tu mensaje">
             <span class="input-group-btn">
                 <button class="btn btn-warning btn-sm" id="btn-chat">
-                    Send
+                    Enviar
                 </button>
             </span>
         </div>
