--- a/client/src/app/layout/dashboard/components/timeline/timeline.component.html
+++ b/client/src/app/layout/dashboard/components/timeline/timeline.component.html
@@ -1,114 +1,92 @@
 <div class="card-body">
     <ul class="timeline">
-        <li>
-            <div class="timeline-badge"><i class="fa fa-check"></i>
+        <li class="timeline-inverted">
+            <div class="timeline-badge warning">
+                <i class="fa fa-handshake-o"></i>
             </div>
             <div class="timeline-panel">
                 <div class="timeline-heading">
-                    <h4 class="timeline-title">Esperando Noticias</h4>
-                    <p><small class="text-muted"><i class="fa fa-clock-o"></i>Esperando Hora</small>
+                    <h4 class="timeline-title">Vinculación</h4>
+                    <p>
+                        <small class="text-muted">
+                            <i class="fa fa-clock-o"></i>hace 4 minutos</small>
                     </p>
                 </div>
                 <div class="timeline-body">
-                    <p>Aqui va a ir el contenido de las noticias</p>
-                </div>
-            </div>
-        </li>
-        <li class="timeline-inverted">
-            <div class="timeline-badge warning"><i class="fa fa-credit-card"></i>
-            </div>
-            <div class="timeline-panel">
-                <div class="timeline-heading">
-                    <h4 class="timeline-title">Mas Noticias</h4>
-                </div>
-                <div class="timeline-body">
-                    <p>Necesita Informacion</p>
-                    <p>Aqui puede ir una imagen</p>
+                    <p>Aqui va un poco de informacion</p>
+                    <a href="">Este link lleva a Vinculacion</a>
                 </div>
             </div>
         </li>
         <li>
-            <div class="timeline-badge danger"><i class="fa fa-bomb"></i>
+            <div class="timeline-badge danger">
+                <i class="fa fa-info-circle"></i>
             </div>
             <div class="timeline-panel">
                 <div class="timeline-heading">
-                    <h4 class="timeline-title">Esperando Noticias</h4>
+                    <h4 class="timeline-title">Investigacion</h4>
+                    <p>
+                        <small class="text-muted">
+                            <i class="fa fa-clock-o"></i>hace 4 minutos</small>
+                    </p>
                 </div>
                 <div class="timeline-body">
-                    <p>Construyendo noticias...</p>
+                    <p>Aqui va un poco de informacion</p>
+                    <a href="">Este link lleva a Investigacion</a>
                 </div>
             </div>
         </li>
         <li class="timeline-inverted">
+            <div class="timeline-badge info">
+                <i class="fa fa-suitcase"></i>
+            </div>
             <div class="timeline-panel">
                 <div class="timeline-heading">
-                    <h4 class="timeline-title">Cargando Informacion</h4>
+                    <h4 class="timeline-title">Portafolio Docente</h4>
+                    <p>
+                        <small class="text-muted">
+                            <i class="fa fa-clock-o"></i>hace 4 minutos</small>
+                    </p>
                 </div>
                 <div class="timeline-body">
-                    <p>Esperando Noticias...</p>
+                    <p>Aqui va un poco de informacion</p>
+                    <a href="">Este link lleva a Portafolio Docente</a>
                 </div>
             </div>
         </li>
         <li>
-            <div class="timeline-badge info"><i class="fa fa-save"></i>
+            <div class="timeline-badge">
+                <i class="fa fa-book"></i>
             </div>
             <div class="timeline-panel">
                 <div class="timeline-heading">
-                    <h4 class="timeline-title">Mas Paginas</h4>
+                    <h4 class="timeline-title">Biblioteca</h4>
+                    <p>
+                        <small class="text-muted">
+                            <i class="fa fa-clock-o"></i>hace 4 minutos</small>
+                    </p>
                 </div>
                 <div class="timeline-body">
-                    <p>Aqui puedes ver mas Aplicaciones de la Pagina</p>
-                    <hr>
-                    <div class="btn-group">
-                        <button type="button" class="btn btn-primary btn-sm dropdown-toggle" data-toggle="dropdown">
-                            <i class="fa fa-gear"></i>  <span class="caret"></span>
-                        </button>
-                        <ul class="dropdown-menu" role="menu">
-                            <li><a href="#">Biblioteca</a>
-                            </li>
-                            <li><a href="#">Bolsa de Empleo</a>
-                            </li>
-                            <li><a href="#">Investigacion</a>
-                            </li>
-                            <li class="divider"></li>
-                            <li><a href="#">Vinculacion</a>
-                            </li>
-                        </ul>
-                    </div>
+                    <p>Aqui va un poco de informacion</p>
+                    <a href="">Este link lleva a la Biblioteca</a>
                 </div>
             </div>
         </li>
         <li class="timeline-inverted">
-            <div class="timeline-panel">
-                <div class="timeline-heading">
-                    <h4 class="timeline-title">Cargando Informacion</h4>
-                </div>
-                <div class="timeline-body">
-                    <p>Esperando Noticias...</p>
-                </div>
-            </div>
-        </li>
-        <li>
-            <div class="timeline-badge info"><i class="fa fa-bomb"></i>
+            <div class="timeline-badge success">
+                <i class="fa fa-credit-card"></i>
             </div>
             <div class="timeline-panel">
                 <div class="timeline-heading">
-                    <h4 class="timeline-title">Esperando Noticias</h4>
+                    <h4 class="timeline-title">Bolsa de Empleo</h4>
+                    <p>
+                        <small class="text-muted">
+                            <i class="fa fa-clock-o"></i>hace 4 minutos</small>
+                    </p>
                 </div>
                 <div class="timeline-body">
-                    <p>Construyendo noticias...   </p>
-                </div>
-            </div>
-        </li>
-        <li class="timeline-inverted">
-            <div class="timeline-badge success"><i class="fa fa-graduation-cap"></i>
-            </div>
-            <div class="timeline-panel">
-                <div class="timeline-heading">
-                    <h4 class="timeline-title">Mas noticias Destacadas</h4>
-                </div>
-                <div class="timeline-body">
-                    <p>A semanas de iniciar un nuevo semestre</p>
+                    <p>Aqui va un poco de informacion</p>
+                    <a href="">Este link lleva a Bolsa de Empleo</a>
                 </div>
             </div>
         </li>
