--- a/client/src/app/layout/dashboard/dashboard.component.html
+++ b/client/src/app/layout/dashboard/dashboard.component.html
@@ -77,7 +77,7 @@
         <div class="col-lg-8">
             <div class="card card-default">
                 <div class="card-header">
-                    <i class="fa fa-clock-o fa-fw"></i> Productos
+                    <i class="fa fa-clock-o fa-fw"></i> Mas Aplicaciones
                 </div>
                 <!-- /.card-header -->
                 <app-timeline></app-timeline>
