--- a/client/src/app/layout/dashboard/components/chat/chat.component.html
+++ b/client/src/app/layout/dashboard/components/chat/chat.component.html
@@ -67,7 +67,7 @@
                         <strong class="pull-right primary-font">Alejandro Coronel</strong>
                     </div>
                     <p>
-                   El Instituto es muy grande y posee muchas especialidades
+                    Instituto es muy grande y posee muchas especialidades
                    </p>
                 </div>
             </li>
